* Author: Mike FABIAN <mfabian@redhat.com>
* 11 Oct 2019 Released 2.6.8 version
* Quote the tables for the key and mouse bindings in the README.md as code
* Do not hardcode the list of useful m17n input methods
* Use LOGGER.exeption() in exception handlers
* Use python logging module with log file rotation instead of writing to stdout/stderr
* Fix set_preedit_underline() with parameter update_gsettings=True

* Author: Mike FABIAN <mfabian@redhat.com>
* 30 Sep 2019 Released 2.6.7 version
* If the first candidate is exactly the same as the typed string prefer longer candidates (Extends inline completions automatically)
* Move README to README.md and use some markdown to make it look better on github
* When showing similar emoji in the lookup table, show the list of keywords which matched only when debugging is on
* Update emoji annotations from CLDR
* More unittests, restructure test files, move some doctests to unittests
* Add a utility class KeyvalsToKeycodes to find ibus key codes instead of hardcoding them
* Add ceb to CLDR_ANNOTATION_FILES

* Author: Mike FABIAN <mfabian@redhat.com>
* 11 Sep 2019 Released 2.6.6 version
* When checking whether to show inline completion, normalize the first candidate as well
* Two more test cases in hunspell_suggest.py
* Make it work correctly with newer French hunspell dictionaries
* Skip some unittests when dictionaries or python modules needed are not installed
* Update emoji annotations from CLDR
* Add more test cases to m17n_translit_test.py for si-sayura.mim

* Author: Mike FABIAN <mfabian@redhat.com>
* 28 Aug 2019 Released 2.6.5 version
* Added Dutch translation (Thanks to Heimen Stoffels)
* Add si-sayura to the list of M17N input methods
* Add more test cases for m17n_translit.py, especially for si-sayura.mim

* Author: Mike FABIAN <mfabian@redhat.com>
* 17 Jul 2019 Released 2.6.4 version
* Update translations from zanata (cs updated, now 100% complete)