@@ -19,6 +19,28 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="2.7.0" date="2019-10-18" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Add support for compose sequences
+            (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/47,
+            Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/36)
+          </li>
+          <li>
+            Test cases for compose support
+          </li>
+          <li>
+            When using doctest: log to stderr and set logging level to
+            DEBUG
+          </li>
+          <li>
+            Properly close file handles when loading hunspell
+            dictionaries
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="2.6.8" date="2019-10-11" urgency="medium">
       <description>
         <ul>
